# GoTrack

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.template.txt  Makefile  platformio.ini  rebuild_indexes.py  sdkconfig  sdkconfig.old
lib/Logging/: FileLogSink.h  logging.hpp
lib/MPU9250/: MPU9250.cpp  MPU9250.h
lib/StopWatch/: StopWatch.h
lib/WiFi/src/: WiFi.h  WiFiSTA.cpp
main/: AAmain.cpp  Accelerometer.cpp  Accelerometer.h  BLELib.cpp  BLELib.h  Common.h  DisplayLogSink.h  Frames.h  Kconfig  ServerCallback.h  Storage.cpp  Storage.h  Tasks.cpp  Tasks.h  UUID.h  component.mk  main.cpp
main/IO/: Client.h  Storage.cpp  Storage.h
main/callbacks/: ServerCallback.h
main/display/: Frames.cpp  Frames.h
main/libs/BMP280/: Adafruit_BMP280.cpp
main/libs/FastLED/: led_sysdefs.h
main/libs/Logging/: formatters.hpp
main/libs/Logging/include/: format.hpp  formatters.hpp  logging.hpp
main/libs/SSD1306/: OLEDDisplay.h  OLEDDisplayUi.h  README.md  SSD1306Wire.h
main/libs/SSD1306/examples/SSD1306UiDemo/: SSD1306UiDemo.ino
main/libs/base64/: base64lib.cpp  test.cpp
main/sensors/: Accelerometer.cpp  Accelerometer.h  Common.cpp  Common.h  Gyroscope.cpp  Gyroscope.h  MPU.cpp  MPU.h  Magnetometer.cpp  Magnetometer.h
main/sinks/: DisplayLogSink.h  ESPLogSink.h  SerialLogSink.h
src/: Finder.h  Frames.h  Settings.h  Symbols.cpp  Symbols.h  main.cpp
src/LogSinks/: DisplayLogSink.h  SerialLogSink.h
